fixed categoryPage product grid not responsive

--- a/src/Components/ProductGrid/ProductGrid.css
+++ b/src/Components/ProductGrid/ProductGrid.css
@@ -4,8 +4,8 @@
 
 .product-grid__inner{
     display: grid;
-    justify-content: center;
-    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
+    justify-items: center;
+    grid-template-columns: repeat( auto-fit, minmax(300px, 1fr));
     grid-auto-rows: auto;
-    gap: var(--margin-normal) var(--margin-normal);
+    gap: var(--margin-mid) var(--margin-normal);
 }
